[package]
name = "vengine_rs"
version = "0.0.1"
description = "A Vulkan engine written in Rust, for learning purposes."
edition = "2024"
authors = ["Masina Elliot <masina.elliot@hotmail.fr>"]
readme = "README.md"
license-file = "LICENSE.md"
homepage = "https://github.com/bobis33/VEngineRS#readme"
repository = "https://github.com/bobis33/VEngineRS"
documentation = "https://bobis33.github.io/VEngineRS/vengine_rs/"
keywords = ["rendering", "engine", "graphics", "rust", "vulkan"]
exclude = [".gitignore", ".editorconfig", "target/*", "tests/*", ".github/*"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE.md", "SECURITY.md"]
publish = false

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
glam = "0.31.0"
raw-window-handle = "0.6.2"
sysinfo = "0.38.0"
winit = "0.30.12"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
